--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
-    "three": "^0.179.1"
+    "@ricky0123/vad-web": "^0.0.24",
+    "pcm-player": "^0.0.18",
+    "vite-plugin-static-copy": "^3.1.1"
   }
 }
